add /user/search api method and influxdb and grafana docker images
