# internal/transport/http/handlers/user/get_by_id.go
@@ -1,16 +1,16 @@
 package user
 
 import (
+	"highload-architect/internal/transport/http/transformers"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 
 	"highload-architect/internal/entities"
-	"highload-architect/internal/transport/http/models"
 	"highload-architect/pkg/httputil"
 )
 
-// SignUp user
+// Get by ID user
 //
 //	@Summary		Get user info by ID
 //	@Description	Получение информации о пользователе по его идентификатору
@@ -20,6 +20,7 @@ import (
 //	@Security		ApiKeyAuth
 //	@Param			id	path		int	true	"User ID"
 //	@Success		200	{object}	models.User
+//	@Failure		400	{object}	models.Error
 //	@Failure		401	{object}	models.Error
 //	@Failure		500	{object}	models.Error
 //	@Router			/user/get/{id} [get]
@@ -34,15 +35,6 @@ func (h *UserHandler) GetByID(c *gin.Context) error {
 		return err
 	}
 
-	c.JSON(http.StatusOK, models.User{
-		ID:        uint64(usr.ID),
-		Username:  string(usr.Username),
-		FirstName: string(usr.FirstName),
-		LastName:  string(usr.LastName),
-		BirthDate: (*models.Date)(usr.Birthdate),
-		Sex:       models.SexFromEntity(usr.Sex),
-		Biography: string(usr.Biography),
-		City:      string(usr.City),
-	})
+	c.JSON(http.StatusOK, transformers.TransformUser(usr))
 	return nil
 }
